# ScreenShot

./: CMakeLists.txt  Readme.md  main.cpp
assert/: img.qrc
include/screenshot/: AIcon.h  GridWidget.h  ImgBox.h  InputBox.h  MainWindow.h  Mask.h  Shot.h  SlidePage.h  TwoBtn.h
src/: AIcon.cpp  AboutItem.cpp  GridWidget.cpp  ImgBox.cpp  InputBox.cpp  MainWindow.cpp  Mask.cpp  Shot.cpp  SlidePage.cpp  TwoBtn.cpp
